syntax = "proto3";
option go_package = "github.com/rahmatrdn/go-skeleton/wallet";

message CreateRequest {
    string user_name = 1;
    int64 balance = 2;
}

message CreateResponse {
    int64 id = 1;
    string user_name = 2;
    int64 balance = 3; 
}

message UpdateRequest {
    int64 id = 1;
    string user_name = 2;
    int64 balance = 3; 
}

message UpdateResponse {
    string message = 1;
}

service WalletService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);

}